# makito

./: .env  docker-compose.yml  pyproject.toml  readme.md
api/: requirements.txt
api/docker/: Dockerfile
api/src/: app.py  models.py  schema.py
api/src/routes/: block.py  logs.py
client/src/: client.py  utils.py
