[tool.poetry]
name = "makito"
version = "0.1.0"
description = ""
authors = ["gonzadev <fernandezgonzalosebastian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
peewee = "^3.15.3"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
